--- a/AtmosForge-ECU/pom.xml
+++ b/AtmosForge-ECU/pom.xml
@@ -19,14 +19,34 @@
     </properties>
 
     <dependencies>
-        <!-- JavaFX -->
+        <!-- ✅ JavaFX dependencies (covers UI, FXML, graphics, media, and web) -->
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
             <version>21.0.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-fxml</artifactId>
+            <version>21.0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-graphics</artifactId>
+            <version>21.0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-media</artifactId>
+            <version>21.0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-web</artifactId>
+            <version>21.0.2</version>
+        </dependency>
 
-        <!-- JUnit 5 -->
+        <!-- ✅ JUnit 5 (keep for later) -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
@@ -53,7 +73,7 @@
                 </configuration>
             </plugin>
 
-            <!-- JavaFX plugin to run the app -->
+            <!-- ✅ JavaFX plugin to run the app -->
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
