updated pom.xml file

--- a/AtmosForge-ECU/pom.xml
+++ b/AtmosForge-ECU/pom.xml
@@ -82,6 +82,16 @@
                     <mainClass>com.atmosforge.ecu.core.ECU</mainClass>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.6.2</version>
+                <configuration>
+                    <mainClass>com.atmosforge.ecu.core.ECU</mainClass>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 </project>
