--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,13 @@
   "configurations": [
     {
       "type": "java",
+      "name": "App",
+      "request": "launch",
+      "mainClass": "com.atmosforge.ecu.App",
+      "projectName": "AtmosForge-ECU"
+    },
+    {
+      "type": "java",
       "name": "ECU",
       "request": "launch",
       "mainClass": "com.atmosforge.ecu.core.ECU",
